--- a/templates/login.html
+++ b/templates/login.html
@@ -41,10 +41,19 @@
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
                 <label for="floatingInput">Email address</label>
               </div>
+
               <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
                 <label for="floatingPassword">Password</label>
               </div>
+
+              {% with message = get_flashed_messages() %}
+                {% if message %}
+                  <div class="text-danger-emphasis mb-3">
+                    {{ message[0] }}
+                  </div>
+                {% endif %}
+              {% endwith %}
 
               <button class="btn btn-primary w-100 py-2 my-2" type="submit">Log In</button>
             </form>
